test3.tf
################################################################################
# VPC
################################################################################


resource "aws_vpc" "eks-test" {
  cidr_block           = var.vpc_cidr_block
  enable_dns_hostnames = var.enable_dns_hostnames
  enable_dns_support   = var.enable_dns_support

  tags = {
    Name = var.vpc_name
    Env  = var.vpc_env
  }
}


resource "aws_internet_gateway" "eks-test-igw" {
  vpc_id = aws_vpc.eks-test.id
}

resource "aws_vpc_dhcp_options" "eks-test-dhcp" {
  domain_name = "ap-northeast-2.compute.internal"
  domain_name_servers = ["AmazonProvidedDNS"]

  tags = {
    Name = "eks-test-dhcp"
    Env = "dev"
  }
}


resource "aws_vpc_dhcp_options_association" "eks-test-association" {
  vpc_id =  "${aws_vpc.eks-test.id}"
  dhcp_options_id = "${aws_vpc_dhcp_options.eks-test-dhcp.id}"
}


resource "aws_subnet" "eks-test-public2a" {
  vpc_id = "${aws_vpc.eks-test.id}"
  cidr_block = "10.0.1.0/24"
  availability_zone = "ap-northeast-2a"
  map_public_ip_on_launch = true
  tags = {
    Name = "eks-test"
    Env = "dev"
    "kubernetes.io/role/elb"  = "1"
  }
}

resource "aws_subnet" "eks-test-public2c" {
  vpc_id = "${aws_vpc.eks-test.id}"
  cidr_block = "10.0.3.0/24"
  availability_zone = "ap-northeast-2c"
  map_public_ip_on_launch = true
  tags = {
    Name = "eks-test"
    Env = "dev"
    "kubernetes.io/role/elb"  = "1"
  }
}

resource "aws_subnet" "eks-test-private2a" {
  vpc_id = "${aws_vpc.eks-test.id}"
  cidr_block = "10.0.4.0/24"
  availability_zone = "ap-northeast-2a"
  tags = {
    Name = "eks-test"
    Env = "dev"
    "kubernetes.io/role/internal-elb" = "1"

}
}


resource "aws_subnet" "eks-test-private2c" {
  vpc_id = "${aws_vpc.eks-test.id}"
  cidr_block = "10.0.6.0/24"
  availability_zone = "ap-northeast-2c"
  tags = {
    Name = "eks-test"
    Env = "dev"
    "kubernetes.io/role/internal-elb" = "1"
  }
}

resource "aws_eip" "nat-gw" {
  domain = "vpc"

}

resource "aws_nat_gateway" "eks-test-nat" {
  allocation_id = "${aws_eip.nat-gw.id}"
  subnet_id = "${aws_subnet.eks-test-public2a.id}"

}

resource "aws_route_table" "eks-test-public" {
  vpc_id = aws_vpc.eks-test.id

  tags = {
    Name = "eks-test-route-table"
  }
}

resource "aws_route_table" "eks-test-private" {
  vpc_id = aws_vpc.eks-test.id

  tags = {
    Name = "eks-test-route-table-private"
  }
}

resource "aws_route" "eks-test-internet_access" {
  route_table_id ="${aws_route_table.eks-test-public.id}"
  destination_cidr_block = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.eks-test-igw.id
}

resource "aws_route" "eks-test-nat" {
  route_table_id = "${aws_route_table.eks-test-private.id}"
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id = aws_nat_gateway.eks-test-nat.id

  lifecycle {
    ignore_changes = [ nat_gateway_id ]
  }
}


resource "aws_route_table_association" "eks-test-subnet-assoication" {
  subnet_id = "${aws_subnet.eks-test-public2a.id}"
  route_table_id = aws_route_table.eks-test-public.id
}



resource "aws_route_table_association" "eks-test-subnet-assoication-3" {
  subnet_id = "${aws_subnet.eks-test-public2c.id}"
  route_table_id = aws_route_table.eks-test-public.id
}

resource "aws_route_table_association" "eks-test-subnet-assoication-4" {
  subnet_id = "${aws_subnet.eks-test-private2a.id}"
  route_table_id = aws_route_table.eks-test-private.id
}


resource "aws_route_table_association" "eks-test-subnet-assoication-6" {
  subnet_id = "${aws_subnet.eks-test-private2c.id}"
  route_table_id = aws_route_table.eks-test-private.id
}

# IAM Role creation

resource "aws_iam_role" "eks-test-role" {
  name = "eks-test-role"

  assume_role_policy =  <<EOF
  {
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Principal": {
        "Service": "eks.amazonaws.com"
      },
      "Action": "sts:AssumeRole"
    }
  ]
}
EOF
}

resource "aws_iam_role_policy_attachment" "eks-test-role-attachment1" {
  role = aws_iam_role.eks-test-role.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"
}
resource "aws_iam_role_policy_attachment" "eks-test-role-attachment2" {
  role = aws_iam_role.eks-test-role.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSVPCResourceController"
}

resource "aws_iam_role_policy_attachment" "eks_service_policy_attachment" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSServicePolicy"
  role       = aws_iam_role.eks-test-role.name
}

resource "aws_iam_policy" "eks_pod_identity_node_policy" {
  name        = "EksPodIdentityNodePolicy"
  description = "Policy for EKS node role to use Pod Identity"
  policy      = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Effect = "Allow",
        Action = [
          "eks-auth:AssumeRoleForPodIdentity"
        ],
        Resource = "*"
      }
    ]
  })
}
resource "aws_iam_role_policy_attachment" "eks_node_role_policy_attachment3" {
  role       = aws_iam_role.eks-test-role.name
  policy_arn = aws_iam_policy.eks_pod_identity_node_policy.arn
}


resource "aws_security_group" "eks-test-cluster-sg" {
  vpc_id = aws_vpc.eks-test.id

  # ingress  {
  #   from_port = 0
  #   to_port = 0
  #   protocol = "-1"
  #   cidr_blocks = ["0.0.0.0/0"]
  # }

  ingress {
    from_port = 0 
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["59.10.176.51/32","10.0.0.0/20","14.35.43.172/32"]
  }

    egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"] # 클러스터의 모든 아웃바운드 트래픽 허용
  }



  tags = {
    Name = "eks-test-cluster-sg"
  }
}

resource "aws_security_group" "eks_node_sg" {
  name        = "eks-node-sg"
  description = "Security group for EKS Node Group"
  vpc_id      = aws_vpc.eks-test.id

  ingress {
    from_port = 0 
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Egress rule for all traffic
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "eks-node-sg"
  }

}

resource "aws_security_group_rule" "eks_node_ingress" {
  type                     = "ingress"
  from_port                = 0
  to_port                  = 0
  protocol                 = "-1"
  security_group_id        = aws_security_group.eks_node_sg.id
 source_security_group_id = aws_security_group.eks-test-cluster-sg.id
}

resource "aws_security_group_rule" "eks_cluster_egress" {
  type                     = "egress"
  from_port                = 0
  to_port                  = 0
  protocol                 = "-1"
  security_group_id        = aws_security_group.eks-test-cluster-sg.id
  source_security_group_id = aws_security_group.eks_node_sg.id
}


## eks cluster 생성

resource "aws_eks_cluster" "eks-test" {
  enabled_cluster_log_types = ["api", "audit","authenticator","controllerManager","scheduler"]
  name = var.cluster_name
  role_arn = aws_iam_role.eks-test-role.arn

  version  = "1.30"

  vpc_config {
    endpoint_private_access = true
    endpoint_public_access = true
    public_access_cidrs = ["59.10.176.51/32","59.10.176.11/32","14.35.43.172/32"]
    subnet_ids = [aws_subnet.eks-test-public2a.id, aws_subnet.eks-test-public2c.id,aws_subnet.eks-test-private2a.id,aws_subnet.eks-test-private2c.id]
    security_group_ids = [aws_security_group.eks-test-cluster-sg.id]
  }

  access_config {
    authentication_mode =  "API_AND_CONFIG_MAP"
    bootstrap_cluster_creator_admin_permissions = true
  }

   kubernetes_network_config {
    service_ipv4_cidr = "10.100.0.0/20"
  }

  depends_on = [
    aws_iam_role_policy_attachment.eks-test-role-attachment1,
    aws_iam_role_policy_attachment.eks-test-role-attachment2,
    aws_iam_role_policy_attachment.eks_service_policy_attachment,
    aws_cloudwatch_log_group.eks-logs-controlplane
  ]

}


resource "aws_iam_role_policy_attachment" "eks_node_policy" {
  role       = aws_iam_role.eks-test-node-role.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy"
}

resource "aws_iam_role_policy_attachment" "eks_cni_policy" {
  role       = aws_iam_role.eks-test-node-role.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy"
}

resource "aws_iam_role_policy_attachment" "eks_ec2_registry_policy" {
  role       = aws_iam_role.eks-test-node-role.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
}


resource "aws_iam_role_policy_attachment" "eks_node_ssm_policy" {
  role       = aws_iam_role.eks-test-node-role.name
  policy_arn = "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"
  
}

# efs csi driver iam role creation
resource "aws_iam_role" "efs_csi_role" {
  name = "EKS-efs-csi-role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17",
    Statement = [{
      Effect = "Allow",
      Principal = {
        Service = "eks.amazonaws.com"
      },
      Action = "sts:AssumeRole"
    }]
  })
}

# 📌 EFS CSI 드라이버를 위한 IAM 정책 첨부
resource "aws_iam_role_policy_attachment" "efs_csi_attach_policy" {
  role       = aws_iam_role.efs_csi_role.name
  policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonEFSCSIDriverPolicy"
}


# IAM Role for eks cloud autoscaler 
resource "aws_iam_role" "eks-autoscaler-role" {
  name = "eks-autoscaler-role"

  assume_role_policy =  <<EOF
  {
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Principal": {
        "Service": "eks.amazonaws.com"
      },
      "Action": "sts:AssumeRole"
    }
  ]
}
EOF
}



## Enableing IAM Roles for Service Accounts



resource "aws_cloudwatch_log_group" "eks-logs-controlplane" {
  name = "/aws/eks/${var.cluster_name}/cluster"
  retention_in_days = 7
}



resource "aws_iam_role" "eks-test-node-role" {
  name = "eks-test-node-role"

  assume_role_policy = <<EOF
  {
    "Version": "2012-10-17",
    "Statement": [
      {
        "Effect": "Allow",
        "Principal": {
          "Service": "ec2.amazonaws.com"
        },
        "Action": "sts:AssumeRole"
      }
    ]
  }
EOF
}

data "aws_ssm_parameter" "eks_ami" {
  name   = "/aws/service/eks/optimized-ami/1.30/amazon-linux-2/recommended/image_id"
}

resource "aws_launch_template" "eks_lt" {
  name          = "eks-node-launch-template"
  image_id      = data.aws_ssm_parameter.eks_ami.value
  instance_type = "t3.medium"

  user_data = base64encode(<<-EOF
    #!/bin/bash
    /etc/eks/bootstrap.sh eks-test
  EOF
  )

  network_interfaces {
    associate_public_ip_address = false
    security_groups             = [aws_security_group.eks_node_sg.id]
  }

  tag_specifications {
    resource_type = "instance"
    tags = {
      Name                                        = "eks-node"
      "kubernetes.io/cluster/${var.cluster_name}" = "owned"
    }
  }

  lifecycle {
    create_before_destroy = true
  }
}


resource "aws_eks_node_group" "eks-test-node-group" {
  cluster_name = aws_eks_cluster.eks-test.name
  node_group_name = "eks-test-nodegroup"
  node_role_arn = aws_iam_role.eks-test-node-role.arn
  subnet_ids = [
    aws_subnet.eks-test-private2a.id,
    aws_subnet.eks-test-private2c.id
  ]
  launch_template {
    name    = aws_launch_template.eks_lt.name
    version = "$Latest"
  }
  # instance_types = [ "t3.medium" ]

  scaling_config {
    desired_size = 0
    max_size = 6
    min_size = 0
  }



  update_config {
    max_unavailable = 2
  }
  #   remote_access {
  #   ec2_ssh_key               = "my-key"  # 키 페어 이름
  #  source_security_group_ids = [aws_security_group.eks_node_sg.id]
  # }

    tags = {
    "Name"  = "eks-test-node-group"
    #"kubernetes.io/cluster/${var.cluster_name}" = "owned"  # 변수로 태그 적용
    "k8s.io/cluster-autoscaler/enabled"         = "true"
    "k8s.io/cluster-autoscaler/${var.cluster_name}" = "owned"
    "eks:nodegroup-name"                  = "eks-test-node-group"

    
  }



  depends_on = [ 
    aws_iam_role_policy_attachment.eks_node_policy,
    aws_iam_role_policy_attachment.eks_cni_policy,
    aws_iam_role_policy_attachment.eks_ec2_registry_policy
   ]
}



resource "aws_iam_role" "ebs_csi_role" {
  name = "ebs-csi-role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17",
    Statement = [
      {
        Effect = "Allow",
        Principal = {
          Federated = "${aws_iam_openid_connect_provider.eks.arn}"
        },
        Action = "sts:AssumeRoleWithWebIdentity",
        Condition = {
          StringEquals = {
            "${replace(aws_iam_openid_connect_provider.eks.url, "https://", "")}:sub" = "system:serviceaccount:kube-system:ebs-csi-controller-sa"
          }
        }
      }
    ]
  })
}


resource "aws_iam_role_policy_attachment" "ebs_csi_attach_policy" {
  role       = aws_iam_role.ebs_csi_role.name
  policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonEBSCSIDriverPolicy"
}

resource "aws_iam_role" "metrics_server_role" {
  name = "metrics-server-addon-role" # 또는 원하시는 역할 이름

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Effect = "Allow"
        Principal = {
          Federated = "${aws_iam_openid_connect_provider.eks.arn}"
        }
        Action = "sts:AssumeRoleWithWebIdentity"
        Condition = {
          StringEquals = {
            "${replace(aws_iam_openid_connect_provider.eks.url, "https://", "")}:sub" = "system:serviceaccount:kube-system:metrics-server"
          }
        }
      }
    ]
  })

  # 메트릭 서버에 필요한 권한 정책 연결 (예시)
  inline_policy {
    name = "metrics-server-policy"
    policy = jsonencode({
      Version = "2012-10-17"
      Statement = [
        {
          Action = [
            "ec2:DescribeInstances",
            "ec2:DescribeNodes",
            "ec2:DescribeVolumes",
            "ec2:DescribeSnapshots",
            "eks:DescribeCluster"
          ],
          Effect   = "Allow"
          Resource = "*"
        }
      ]
    })
  }

  # 필요한 추가 권한 정책 연결 (AWS 관리형 또는 사용자 정의)
  # resource "aws_iam_policy_attachment" "metrics_server_policy_attachment" {
  #   name       = "metrics-server-policy-attachment"
  #   roles      = [aws_iam_role.metrics_server_role.name]
  #   policy_arn = "arn:aws:iam::aws:policy/ReadOnlyAccess" # 예시
  # }
}


resource "aws_eks_addon" "ebs_csi_addon" {
  cluster_name = aws_eks_cluster.eks-test.name  # EKS 클러스터 이름
  addon_name   = "aws-ebs-csi-driver"
  addon_version = "v1.41.0-eksbuild.1"
  resolve_conflicts_on_create = "OVERWRITE"
  resolve_conflicts_on_update = "PRESERVE"
  
  service_account_role_arn = aws_iam_role.ebs_csi_role.arn
  # depends_on = [aws_iam_role_policy_attachment.ebs_csi_policy_attach]
}
resource "aws_eks_addon" "ebs_metric_addon" {
  cluster_name = aws_eks_cluster.eks-test.name  # EKS 클러스터 이름
  addon_name   = "metrics-server"
}



data "aws_eks_cluster" "eks-test" {
  name =  aws_eks_cluster.eks-test.name
  depends_on = [aws_eks_cluster.eks-test]
}

data "aws_eks_cluster_auth" "eks-test-auth" {
  name = aws_eks_cluster.eks-test.name
}

resource "aws_eks_addon" "vpc_cni" {
  cluster_name = aws_eks_cluster.eks-test.name
  addon_name = "vpc-cni"
  addon_version = "v1.19.0-eksbuild.1"
  # resolve_conflicts_on_create = "OVERWRITE"
}

resource "aws_eks_addon" "kube-proxy" {
  cluster_name = aws_eks_cluster.eks-test.name
  addon_name = "kube-proxy"
  addon_version = "v1.30.6-eksbuild.3"
# resolve_conflicts_on_create  = "OVERWRITE"
}
resource "aws_eks_addon" "efs_csi_driver" {
  cluster_name = aws_eks_cluster.eks-test.name
  addon_name = "aws-efs-csi-driver"
  addon_version = "v2.1.7-eksbuild.1"
# resolve_conflicts_on_create  = "OVERWRITE"
service_account_role_arn = aws_iam_role.efs_csi_role.arn
depends_on = [aws_iam_role_policy_attachment.efs_csi_attach_policy]
}


resource "aws_eks_addon" "coredns" {
  cluster_name = aws_eks_cluster.eks-test.name
  addon_name = "coredns"
  addon_version = "v1.11.3-eksbuild.1"
  # resolve_conflicts_on_create = "OVERWRITE"

  configuration_values = jsonencode({
    replicaCount = 2
    resources = {
      limits = {
        cpu = "100m"
        memory = "150Mi"
      }
      requests = {
        cpu = "100m"
        memory = "150Mi"
          }
        }
      })
    }


resource "aws_eks_addon" "eks_pod_identity_agent" {
  cluster_name = aws_eks_cluster.eks-test.name # EKS 클러스터 이름
  addon_name   = "eks-pod-identity-agent"
  addon_version = "v1.0.0-eksbuild.1" # 또는 지원되는 다른 버전 지정

 
}


data "tls_certificate" "eks" {
  url = aws_eks_cluster.eks-test.identity[0].oidc[0].issuer
}

resource "aws_iam_openid_connect_provider" "eks" {
  client_id_list  = ["sts.amazonaws.com"]
  thumbprint_list = [data.tls_certificate.eks.certificates[0].sha1_fingerprint]
  url             = aws_eks_cluster.eks-test.identity[0].oidc[0].issuer
}


### LB controllor

data "aws_iam_policy_document" "aws_load_balancer_controller_assume_role_policy" {
  statement {
    actions = ["sts:AssumeRoleWithWebIdentity"]
    effect  = "Allow"

    condition {
      test     = "StringEquals"
      variable = "${replace(aws_iam_openid_connect_provider.eks.url, "https://", "")}:sub"
      values   = ["system:serviceaccount:kube-system:aws-load-balancer-controller"]
    }

    principals {
      identifiers = [aws_iam_openid_connect_provider.eks.arn]
      type        = "Federated"
    }
  }
}

resource "aws_iam_role" "aws_load_balancer_controller" {
  assume_role_policy = data.aws_iam_policy_document.aws_load_balancer_controller_assume_role_policy.json
  name               = "aws-load-balancer-controller"
}

resource "aws_iam_policy" "aws_load_balancer_controller" {
  policy = file("./AWSLoadBalancerController.json")
  name   = "AWSLoadBalancerController"
}

resource "aws_iam_role_policy_attachment" "aws_load_balancer_controller_attach" {
  role       = aws_iam_role.aws_load_balancer_controller.name
  policy_arn = aws_iam_policy.aws_load_balancer_controller.arn
}

output "aws_load_balancer_controller_role_arn" {
  value = aws_iam_role.aws_load_balancer_controller.arn
}






## CA -cluster autoscaler


data "aws_iam_policy_document" "eks_cluster_autoscaler_assume_role_policy" {
  statement {
    actions = ["sts:AssumeRoleWithWebIdentity"]
    effect  = "Allow"

    condition {
      test     = "StringEquals"
      variable = "${replace(aws_iam_openid_connect_provider.eks.url, "https://", "")}:sub"
      values   = ["system:serviceaccount:kube-system:cluster-autoscaler"]
    }

    principals {
      identifiers = [aws_iam_openid_connect_provider.eks.arn]
      type        = "Federated"
    }
  }
}

resource "aws_iam_role" "eks_cluster_autoscaler" {
  assume_role_policy = data.aws_iam_policy_document.eks_cluster_autoscaler_assume_role_policy.json
  name               = "eks-cluster-autoscaler"
}

resource "aws_iam_policy" "eks_cluster_autoscaler" {
  name = "eks-cluster-autoscaler"

  policy = jsonencode({
    Statement = [{
      Action = [
                "autoscaling:DescribeAutoScalingGroups",
                "autoscaling:DescribeAutoScalingInstances",
                "autoscaling:DescribeLaunchConfigurations",
                "autoscaling:DescribeTags",
                "autoscaling:SetDesiredCapacity",
                "autoscaling:TerminateInstanceInAutoScalingGroup",
                "ec2:DescribeImages",
                "ec2:DescribeInstanceTypes",
                "ec2:DescribeLaunchTemplateVersions",
                "ec2:GetInstanceTypesFromInstanceRequirements",
                "eks:DescribeNodegroup",
                "autoscaling:SetDesiredCapacity",
                "autoscaling:TerminateInstanceInAutoScalingGroup"
            ]
      Effect   = "Allow"
      Resource = "*"
    }]
    Version = "2012-10-17"
  })
}

resource "aws_iam_role_policy_attachment" "eks_cluster_autoscaler_attach" {
  role       = aws_iam_role.eks_cluster_autoscaler.name
  policy_arn = aws_iam_policy.eks_cluster_autoscaler.arn
}











output "eks_cluster_autoscaler_arn" {
  value = aws_iam_role.eks_cluster_autoscaler.arn
}







output "endpoint" {
  value = aws_eks_cluster.eks-test.endpoint
}

output "kubeconfig-certificate-authority-data" {
  value = aws_eks_cluster.eks-test.certificate_authority[0].data
}

resource "aws_eks_access_entry" "example" {
  cluster_name  = aws_eks_cluster.eks-test.name
  principal_arn = "arn:aws:iam::120653558546:role/aws-reserved/sso.amazonaws.com/ap-northeast-2/AWSReservedSSO_AWSAdministratorAccess_20e3efd18e0823c7"
  type          = "STANDARD"
}



resource "aws_eks_access_policy_association" "example" {
  cluster_name  = aws_eks_cluster.eks-test.name
  principal_arn = aws_eks_access_entry.example.principal_arn
  policy_arn    = "arn:aws:eks::aws:cluster-access-policy/AmazonEKSAdminPolicy"

  access_scope {
    type = "cluster"
  }
  depends_on = [aws_eks_access_entry.example]
}



# 📌 EFS 파일 시스템 생성
resource "aws_efs_file_system" "efs" {
  creation_token   = "my-efs"
  performance_mode = "generalPurpose"
  throughput_mode  = "bursting"

  tags = {
    Name = "my-efs"
  }
}

# 📌 EFS 보안 그룹 생성
resource "aws_security_group" "efs_sg" {
  name        = "efs-sg"
  description = "Allow NFS traffic for EFS"
  vpc_id      = aws_vpc.eks-test.id

  ingress {
    from_port   = 2049
    to_port     = 2049
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]  # 필요시 제한 가능
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "efs-security-group"
  }
}

# 📌 EFS 마운트 타겟 생성 (프라이빗 서브넷에서 사용)
resource "aws_efs_mount_target" "efs_target" {
  count          = 2  # 가용영역 2개에 대해 생성
  file_system_id = aws_efs_file_system.efs.id
  subnet_id      = element([aws_subnet.eks-test-private2a.id, aws_subnet.eks-test-private2c.id], count.index)
  security_groups = [aws_security_group.efs_sg.id]
}
